v3.10.1 (XXXX-XX-XX)
--------------------

* Log better diagnosis information in case multiple servers in a cluster are
  configured to use the same endpoint.

* BTS-908: Fixed WebUI GraphViewer not being able to create a new edge relation
  between two nodes in cases where only one edge definition has been defined
  inside the graph definition.

* MDS-1019: Make user search case-insensitive and allow search by name.

* MDS-1016: When creating a new collection the fields "Number of Shards" and
  "Replication factor" are greyed out now when the field "Distribute shards
  like" is not empty.

* Fixed BTS-850: Fixed the removal of already deleted orphan collections out of
  a graph definition. The removal of an already deleted orphan collection out of
  a graph definition failed and has been rejected in case the collection got
  dropped already.

* BTS-1008: Update react-autocomplete-input to fix single letter collection bug
  when creating a link in the views in the WebUI.

* BTS-1061: ARM was not recognized on Apple M1.

* BTS-325: Changed the HTTP status code from `400` to `404` of the ArangoDB
  error code `ERROR_GRAPH_REFERENCED_VERTEX_COLLECTION_NOT_USED` to handle this
  error in accordance to our edge errors.

* Adjust permissions for "search-alias" views.

  Previously, "search-alias" views were visible to users that didn't have read
  permissions on the underlying referenced collections. This was inconsistent,
  because "arangosearch" views weren't shown to users that didn't have read
  permissions on the underlying links.
  Now, the behavior for "search-alias" views is the same as for "arangosearch"
  views, i.e. "search-alias" views are not shown and are not accessible for
  users that don't have at least read permissions on the underlying collections.

* BTS-969: Added restriction for HTTP request `/cluster/rebalance`not to
  consider servers that have failed status as a possible target for rebalancing
  shards in its execution plan.
